8243325: Cleanup TaskQueueSuper<>::peek

Replaced uses of peek with new assert_empty.

Reviewed-by: tschatzl, sjohanss